     The following attributes were renamed (old names still work, for now):
     leader -> canrecruit
     total_movement -> max_moves
     movement_left -> moves
     states -> status
   * Nearly all unit type, side, weapon, and terrain attributes available
     to Lua code are now also exposed to WFL. The exceptions are mainly
     translatable strings.
   * The 'special' attribute of weapons was renamed to 'specials', and it now
     contains the special IDs rather than their translateable names.
   * New syntax features:
     * String interpolation syntax. Within a formula string (enclosed in
       'single quotes'), the syntax [some_formula] interpolates the result
       of the inner formula into the string. (The simplest use case is
       interpolating the values of variables.)
     * String can now escape special characters:
       ['] single quote, [(] open square bracket, [)] close square bracket
     * New 'in' operator which tests if a list contains an item or if a map
       contains a key.
     * New concatenation operator a..b which works on strings and lists
     * New range operator a~b which produces a list of consecutive integers
       This can also be used for "list slicing" - eg my_list[3~5] returns
       a new list containing elements 3 through 5 of my_list.
     * Lists can be used as an index for a list. This is "selection indexing"
       and returns a new list with only the elements specified by the indexing
       list.
     * Function definitions (using the def keyword) are now supported in all
       formula contexts, which means that they can be used outside FormulaAI.
       However, non-FormulaAI functions are currently local to the formula
       that declares them.
     * Maps containing string keys that are valid identifiers can now be
       indexed with the dot operator instead of the indexing operator.
     * Strings can now be indexed via 'string'.char[n]. Also supported are